<resources>
    <string name="app_name">Blazing Hero</string>
    <string name="open">Open Naigation Drawer</string>
    <string name="close">Close Naigation Drawer</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="account">Account</string>
    <string name="exit">exit</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="seting">Settings</string>
    <string name="play_online">Play Online</string>
    <string name="play_ofline">Play Ofline</string>
</resources>