<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/account"
                    android:icon="@drawable/baseline_account_circle_24"
                    android:title="@string/account"
                    />
                <item android:id="@+id/login"
                    android:icon="@drawable/baseline_login_24"
                    android:title="@string/login"
                    />
                <item android:id="@+id/logout"
                    android:icon="@drawable/baseline_logout_24"
                    android:title="@string/logout"
                    />
            </group>
        </menu>
    </item>
    <item android:title="@string/settings">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/settings"
                    android:icon="@drawable/baseline_settings_24"
                    android:title="@string/seting"
                    />
            </group>
        </menu>
    </item>
    <item android:title="@string/contact_us">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/feedback"
                    android:icon="@drawable/baseline_feedback_24"
                    android:title="@string/feedback"
                    />
                <item android:id="@+id/help"
                    android:icon="@drawable/baseline_help_outline_24"
                    android:title="@string/help"
                    />
            </group>
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item android:id="@+id/exit"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:title="@string/exit"
            />
    </group>
</menu>